--- a/client/src/App.css
+++ b/client/src/App.css
@@ -386,6 +386,7 @@ a{
 /* reponse */
 
 .response{
+  overflow-x: scroll;
   padding: 10px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.2);
