--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
+body{
+  font-family: 'Open Sans', sans-serif;
+  background-color: #f3f4f6;
+}
+
 :root{
   --height-navbar: 56px;
 }
@@ -123,6 +128,14 @@ a{
   font-weight: bold;
 }
 
+.h-100{
+  height: 100%;
+}
+
+.bg-white{
+  background-color: white;
+}
+
 .font-size-larger{
   font-size: larger;
 }
@@ -142,19 +155,7 @@ a{
   cursor: pointer; 
 }
 /* Header */
-.navbar-brand{
-  font-size: x-large;
-  font-weight: 700;
-}
 
-.navbar{
-  height: var(--height-navbar);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1030;
-}
 
 .navbar .nav-link{
   color: white!important;
@@ -162,6 +163,16 @@ a{
 
 .nav-link{
   opacity: 1;
+}
+
+.nav-body{
+  transition: all ease-in 1;
+}
+
+
+
+.link-navbody:hover{
+  color: #0d6efd!important;
 }
 
 /* Home */
@@ -256,10 +267,17 @@ a{
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  background-color: transparent;
 }
 
 .test-tools-btn span{
   color: #0d6efd;
+}
+
+.test-tools-btn-move{
+  background-color: transparent;
+  border: none;
+  height: 24px;
 }
 
 .exam{
@@ -361,15 +379,16 @@ a{
 }
 
 .exam-question-tool-item{
-  margin-top: 0;
+  margin: 0 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  opacity: 0.7;
 }
 
 .exam-question-tool-item:hover{
-  opacity: 0.8;
+  opacity: 1;
 }
 
 .exam-add-option{
@@ -382,6 +401,7 @@ a{
 .exam-add-option:hover{
   color: black;
 }
+
 
 /* reponse */
 
