--- a/client/src/App.css
+++ b/client/src/App.css
@@ -166,8 +166,23 @@ a{
 }
 
 .nav-body{
-  transition: all ease-in 1;
+  transition: all ease-in 2;
+  display: none;
 }
+
+.nav-body.show{
+  display: block;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  padding: 0;
+  margin-top: -8px;
+  width: 70vw;
+  z-index: 1001;
+}
+
+
 
 
 
