--- a/client/src/App.css
+++ b/client/src/App.css
@@ -166,25 +166,76 @@ a{
 }
 
 .nav-body{
-  transition: all ease-in 2;
+  transition: all ease-in 0.5s;
   display: none;
+  background-color: white;
+  position: relative;
 }
 
 .nav-body.show{
+  padding: 20px 5px;
   display: block;
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
-  padding: 0;
-  margin-top: -8px;
   width: 70vw;
-  z-index: 1001;
+  z-index: 1032;
 }
 
+.btn-show-navbodymd{
+  display: none;
+}
 
+@media (min-width: 768px) { 
+  .nav-body{
+    display: block;
+  }
+  .nav-body.open{
+    animation: navbodymd-appear ease-in 0.2s;
+    transition: all ease-in 0.2s;
+    position: relative;
+  }
 
+  .nav-body > div {
+    padding: 50px 10px;
+  }
 
+  .nav-body.close {
+    width: 50px;
+    transition: all ease-in 0.2s;
+  }
+
+  .nav-body.close > div{
+    display: none;
+    opacity: 0;
+  }
+
+  .btn-show-navbodymd{
+    display: block;
+  }
+
+  .btn-show-navbodymd{
+    position: absolute;
+    height: 35px;
+    top: 5px;
+    left: 5px;
+    cursor: pointer;
+  }
+  
+  .btn-show-navbodymd.close{
+    display: none;
+  }
+
+  @keyframes navbodymd-appear {
+    from{
+      opacity: 0;
+    }
+    to{
+      opacity: 100;
+    }
+  }
+}
 
 .link-navbody:hover{
   color: #0d6efd!important;
@@ -263,11 +314,13 @@ a{
 /* edit exam */
 
 .test-tools{
+  border: 1px double rgb(196, 191, 191);
   height: 60px;
+  width: 100%;
+  position: sticky;
+  right: 0;
+  bottom: 0;
   background-color: white;
-  box-shadow: 1px 3px 10px 5px rgba(0, 0, 0, 0.5);
-  margin-left: 20px;
-  margin-right: 20px;
   border-radius: 10px;
   display: flex;
   justify-content: space-evenly;
@@ -285,8 +338,8 @@ a{
   background-color: transparent;
 }
 
-.test-tools-btn span{
-  color: #0d6efd;
+.modal-link{
+  border-radius: 10px;
 }
 
 .test-tools-btn-move{
@@ -298,7 +351,7 @@ a{
 .exam{
   margin-bottom: 60px;
   padding: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  flex: 1;
 }
 
 .exam *{
@@ -310,11 +363,20 @@ a{
   outline-color: #0d6efd;
   color: crimson;
   padding: 5px;
+  font-weight: 600;
 }
 
 .exam-description{
   outline-color: #0d6efd;
   padding: 5px;
+}
+
+.exam-header{
+  border-top: 5px solid black;
+  padding: 5px; 
+  border-radius: 10px; 
+  box-shadow: 0 0 2px 1px rgba(0,0,0,0.3);
+  background-color: white;
 }
 
 .exam-question-title{
@@ -330,10 +392,7 @@ a{
 }
 
 .exam-questions{
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  padding: 20px;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
-  background-color: #f0f0f0;
+  background-color: #f3f4f6;
   border-radius: 10px;
 }
 
@@ -342,7 +401,7 @@ a{
   background-color: white;
   padding: 15px;
   box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.3);
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   border-radius: 7px;
 }
 
